@@ -1,6 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.630 2006/03/26 16:17:37 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.631 2006/03/30 17:29:23 agaffney Exp $
+
+  30 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  add get_devnode()
+  fix up detect_devices() to detect cciss/ida arrays
+  src/templates/x86ArchitectureTemplate.py:
+  use get_devnode() instead of figuring out the devnode
 
   26 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
